--- a/src/stylesheets/popup.css
+++ b/src/stylesheets/popup.css
@@ -6,33 +6,46 @@
 body {
   width: 500px;
   font-size: 13px;
-  line-height: 1.9;
   text-shadow: 0 1px 0 white;
 }
 
 .main {
   position: relative;
-  padding: 10px 10px 6px;
+  padding: 4px 10px 4px;
   border-radius: 5px;
   background: #fafafa;
 }
 
-.message {
+#icon {
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+  border-radius: 5px;
+  float: left;
 }
 
-#icon {
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
+.content {
+  width: 400px;
+  height: 30px;
   vertical-align: middle;
-  border-radius: 3px;
+  float: left;
 }
 
 #title {
   margin-left: 5px;
-  line-height: 20px;
+  line-height: 12px;
   font-size: 12px;
+  color: #90918E;
+}
+
+#message {
+  margin-left: 5px;
+  line-height: 13px;
+  font-size: 13px;
   font-weight: bold;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 #next-button {
